--- a/README
+++ b/README
@@ -1,1 +1,70 @@
-CakeCMS
+<div class="text install">
+    <h1>Installation</h1>
+    
+    <strong>Requirements</strong>
+    <p>
+        <ul>
+            <li>HTTP Server. For example: Apache. mod_rewrite is preferred, but by no means required.</li>
+            <li>PHP 5.2.8 or greater.</li>
+            <li>PDO extensions</li>
+        </ul>
+    </p>
+    <strong>Download CakeCMS</strong>
+    <div class="code">
+        Visit the main website http://www.cakecms.com.br and follow the “Download” link.
+    </div>
+    <p>OR</p>
+    <div class="code">
+        git clone git://github.com/cakephp/cakephp.git
+    </div>
+    <p></p>
+    <strong>Permissions</strong>
+    <p>
+        <div class="code">app/tmp</div>
+        <div class="code">app/webroot/files/</div>
+    </p>
+    <strong>Define Diretory</strong>
+    <p>The diretory default is /. If your aplication isseted in directory: /mysite/ <i>ex:www.example.com/mysite/</i>. Edit files: 
+        <div class="code">
+            app/webroot/js/admin/ckeditor/ckfinder/config.php | line: 67 '/app/webroot/files/uploads/' FOR '/mysite/cakecms/app/webroot/files/uploads/'
+        </div>
+    </p>
+    <strong>Database</strong>
+    <p>
+        <div class="code">
+            Import file app/cakecms.sql in database Mysql
+        </div>
+        <div class="code">
+            Set data in file app/Config/database.php <br /><br />
+            <i>
+            public $default = array(<br />
+                    'datasource' => 'Database/Mysql',<br />
+                    'persistent' => false,<br />
+                    'host' => 'localhost',<br />
+                    'login' => 'root',<br />
+                    'password' => '1234',<br />
+                    'database' => 'cakecms',<br />
+                    'prefix' => '',<br />
+                    //'encoding' => 'utf8',<br />
+            );<br />
+            </i>
+        </div>
+    </p>
+    <strong>Finishing</strong>
+    <p>
+        The developers contain special permissions in painel controll
+        <div class="code">
+            Acess admin: www.example.com/admin/ <br />
+            Username: dev<br />
+            password: cakecms<br />
+        </div>
+    </p>
+     <p>
+        The user
+        <div class="code">
+            Acess admin: www.example.com/admin/ <br />
+            Username: admin<br />
+            password: cakecms<br />
+        </div>
+    </p>
+</div>
